Run prettier on YAML files

--- a/.github/workflows/ci-js.yml
+++ b/.github/workflows/ci-js.yml
@@ -5,15 +5,15 @@ on:
   push:
     branches: ["main"]
     paths:
-      - '**/*.js'
-      - '**/*.html'
-      - '**/*.css'
+      - "**/*.js"
+      - "**/*.html"
+      - "**/*.css"
   pull_request:
     branches: ["main"]
     paths:
-      - '**/*.js'
-      - '**/*.html'
-      - '**/*.css'
+      - "**/*.js"
+      - "**/*.html"
+      - "**/*.css"
   workflow_dispatch:
 
 jobs:
