--- a/.github/workflows/ci-py.yml
+++ b/.github/workflows/ci-py.yml
@@ -5,11 +5,11 @@ on:
   push:
     branches: ["main"]
     paths:
-      - '**/*.py'
+      - "**/*.py"
   pull_request:
     branches: ["main"]
     paths:
-      - '**/*.py'
+      - "**/*.py"
   workflow_dispatch:
 
 jobs:
@@ -19,8 +19,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
-          cache: 'pip' # caching pip dependencies
+          python-version: "3.11"
+          cache: "pip" # caching pip dependencies
       - name: Install linters
         run: pip install pylint==2.17.5 black==23.7.0
       - name: Lint
