pre-commit: Update pylint filter

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,7 @@ repos:
         entry: pylint
         language: system
         types: [python]
+        files: "friends_queue/"
         args: [
             "-rn", # Only display messages
             "-sn", # Don't display the score
