--- a/.github/workflows/ci-py.yml
+++ b/.github/workflows/ci-py.yml
@@ -13,7 +13,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  checks:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -21,9 +21,21 @@ jobs:
         with:
           python-version: "3.11"
           cache: "pip" # caching pip dependencies
-      - name: Install linters
-        run: pip install pylint==2.17.5 black==23.7.0
+      - name: Install linter
+        run: pip install pylint==2.17.5
+      - name: Install requirements
+        run: pip install -r requirements.txt
       - name: Lint
         run: pylint friends_queue
+  format:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+          cache: "pip" # caching pip dependencies
+      - name: Install formatter
+        run: pip installblack==23.7.0
       - name: Check formatting
         run: black --check friends_queue
